# uuid

./: .gitignore  Makefile.am  configure.ac
M4/: libuuid.m4
