AC_INIT([uuid],[master])
AC_CONFIG_MACRO_DIR([M4])
AC_CONFIG_AUX_DIR([BuildScripts])
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

AC_CONFIG_HEADER([config.h])

AC_PROG_CC([clang gcc c99 cc])
AC_PROG_CC_C99
AC_HEADER_STDC
AC_PROG_LIBTOOL

BT_REQUIRE_LIBUUID

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
